--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.1'
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
         applicationId "piotr.michalkiewicz.mealplannerclient"
@@ -41,15 +41,15 @@ repositories {
 }
 
 dependencies {
-    def nav_version = "2.3.0"
+    def nav_version = "2.3.2"
     def room_version = "2.3.0-alpha01"
 
-    implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
+    implementation 'androidx.paging:paging-runtime:3.0.0-alpha10'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-alpha07'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -59,29 +59,30 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //noinspection GradleDependency
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation files('libs/commons-io-2.6.jar')
     implementation 'com.facebook.android:facebook-login:[5,6)'
-    implementation "androidx.preference:preference-ktx:1.1.0"
-    implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
-    implementation 'androidx.fragment:fragment:1.3.0-alpha06'
+    implementation "androidx.preference:preference-ktx:1.1.1"
+    implementation 'androidx.activity:activity-ktx:1.2.0-beta02'
+    implementation 'androidx.fragment:fragment:1.3.0-beta02'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
