--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,27 +41,27 @@ repositories {
 }
 
 dependencies {
-    def nav_version = "2.3.2"
-    def room_version = "2.3.0-alpha04"
+    def nav_version = "2.3.3"
+    def room_version = "2.3.0-beta01"
 
-    implementation 'androidx.paging:paging-runtime:3.0.0-alpha11'
+    implementation 'androidx.paging:paging-runtime:3.0.0-beta01'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0-rc01'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava3:2.3.0-alpha04"
+    implementation "androidx.room:room-rxjava3:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -79,14 +79,14 @@ dependencies {
     implementation files('libs/commons-io-2.6.jar')
     implementation 'com.facebook.android:facebook-login:5.15.3'
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'androidx.activity:activity-ktx:1.2.0-rc01'
-    implementation 'androidx.fragment:fragment:1.3.0-rc01'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha02'
+    implementation 'androidx.fragment:fragment:1.3.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
-    implementation "com.google.android.material:material:1.2.1"
+    implementation "com.google.android.material:material:1.3.0"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
