--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,23 @@ repositories {
 
 dependencies {
     def nav_version = "2.3.0"
-    def room_version = "2.3.0-alpha01"
+    def room_version = "2.3.0-beta02"
 
+    implementation("androidx.room:room-runtime:$room_version") {
+        exclude(group:'org.xerial')
+    }
+    kapt("androidx.room:room-compiler:$room_version"){
+        exclude(group:'org.xerial')
+    }
+    implementation("androidx.room:room-ktx:$room_version"){
+        exclude(group:'org.xerial')
+    }
+
+    testImplementation("androidx.room:room-testing:$room_version"){
+        exclude(group:'org.xerial')
+    }
+
+    implementation 'org.xerial:sqlite-jdbc:3.34.0'
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
@@ -52,11 +67,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava3:2.3.0-alpha03"
-    testImplementation "androidx.room:room-testing:$room_version"
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
