--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ ext {
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.50'
+    ext.kotlinVersion = '1.4.30'
 
     repositories {
         google()
@@ -11,7 +11,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.2.0-beta05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.projectlombok:lombok:1.18.12"
         def nav_version = "2.3.0"
