--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:label="@string/title_activity_edit_location" />
         <activity android:name=".view.userPreferences.oldFragments.EditPasswordActivity" />
         <activity android:name=".view.recipes.CookingStepsActivity" />
-        <activity android:name=".view.recipes.IngredientsActivity" />
+        <activity android:name=".view.recipes.IngredientsFragment" />
         <activity
             android:name=".view.recipes.RecipeFragment"
             android:label="@string/title_activity_recipe"
