--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ ext {
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.4.30'
+    ext.kotlinVersion = '1.4.32'
 
     repositories {
         google()
@@ -11,12 +11,12 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-beta06'
+        classpath 'com.android.tools.build:gradle:4.2.0-rc01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.projectlombok:lombok:1.18.12"
-        def nav_version = "2.3.0"
+        def nav_version = "2.3.5"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.33-beta"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
