--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'dagger.hilt.android.plugin'
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.1'
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
 
     defaultConfig {
         applicationId "piotr.michalkiewicz.mealplannerclient"
@@ -15,7 +17,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "piotr.michalkiewicz.mealplannerclient.HiltTestRunner"
     }
     buildTypes {
         release {
@@ -36,13 +38,25 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    testOptions {
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
+    }
+
+    kapt {
+        correctErrorTypes true
+    }
 }
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
-    def nav_version = "2.3.0"
+    def nav_version = "2.3.4"
     def room_version = "2.3.0-beta02"
 
     implementation("androidx.room:room-runtime:$room_version") {
@@ -63,37 +77,42 @@ dependencies {
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha05'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-rc01'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation "androidx.room:room-rxjava3:2.3.0-alpha03"
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    //lifecycle
+    def lifecycle_ver = '2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ver"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
+    //navigation
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
     implementation files('libs/commons-io-2.6.jar')
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation "androidx.preference:preference-ktx:1.1.0"
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
-    implementation 'androidx.fragment:fragment:1.3.0-alpha06'
+
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
@@ -112,8 +131,45 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_ver"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_ver"
 
+    // Hilt For instrumentation tests
+    androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_ver"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_ver"
+
+    // Hilt For local unit tests
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_ver"
+    kaptTest "com.google.dagger:hilt-android-compiler:$hilt_ver"
+
     //hilt for ViewModel
     def hilt_lifecycle_ver = "1.0.0-alpha01"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_ver"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_ver"
+
+
+    def fragment_version = "1.3.0-alpha08"
+    implementation "androidx.fragment:fragment:$fragment_version"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+
+    def espresso_version = "3.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+
+
+    def androidx_test_version = "1.3.0"
+    androidTestImplementation "androidx.test:runner:$androidx_test_version"
+    androidTestImplementation "androidx.test:rules:$androidx_test_version"
+
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Assertions
+    def androidx_junit_version = "1.1.2"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
+    androidTestImplementation "com.google.truth:truth:1.1.2"
+
+    // Required -- JUnit 4 framework
+    testImplementation 'junit:junit:4.13'
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.0.0'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
 }
