--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,8 @@ repositories {
 }
 
 dependencies {
-    def nav_version = "2.3.5"
-    def room_version = "2.3.0-rc01"
-//    def lifecycle_ver = '2.3.0'
+    def nav_version = "2.3.4"
+    def room_version = "2.3.0-beta02"
 
     implementation("androidx.room:room-runtime:$room_version") {
         exclude(group:'org.xerial')
@@ -74,45 +73,49 @@ dependencies {
     }
 
     implementation 'org.xerial:sqlite-jdbc:3.34.0'
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-beta03'
+    implementation 'androidx.paging:paging-runtime:3.0.0-beta03'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:0.19.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha01'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
-    implementation "androidx.room:room-rxjava3:2.3.0-rc01"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.room:room-rxjava3:2.3.0-alpha03"
+
+    //lifecycle
+    def lifecycle_ver = '2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ver"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
+    //navigation
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation files('libs/commons-io-2.6.jar')
-    implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha06'
-    implementation 'androidx.fragment:fragment:1.3.2'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation "androidx.preference:preference-ktx:1.1.0"
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
+
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
-    implementation "com.google.android.material:material:1.3.0"
+    implementation "com.google.android.material:material:1.2.1"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
@@ -135,19 +138,15 @@ dependencies {
     testImplementation "com.google.dagger:hilt-android-testing:$hilt_ver"
     kaptTest "com.google.dagger:hilt-android-compiler:$hilt_ver"
 
-
     //hilt for ViewModel
     def hilt_lifecycle_ver = "1.0.0-alpha01"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_ver"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_ver"
 
-    // Required -- JUnit 4 framework
-    testImplementation 'junit:junit:4.13.2'
-    // Optional -- Robolectric environment
-    testImplementation 'androidx.test:core:1.3.0'
-    // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:2.19.0'
-    androidTestImplementation 'org.mockito:mockito-core:2.19.0'
+
+    def fragment_version = "1.3.0-alpha08"
+    implementation "androidx.fragment:fragment:$fragment_version"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
     def espresso_version = "3.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
@@ -165,4 +164,11 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidx_junit_version"
     androidTestImplementation "com.google.truth:truth:1.1.2"
 
+    // Required -- JUnit 4 framework
+    testImplementation 'junit:junit:4.13'
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.0.0'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
 }
