--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,7 @@ repositories {
 }
 
 dependencies {
-    def nav_version = "2.3.4"
-    def room_version = "2.3.0-beta02"
+    def room_version = "2.3.0-rc01"
 
     implementation("androidx.room:room-runtime:$room_version") {
         exclude(group:'org.xerial')
@@ -80,7 +79,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation "androidx.room:room-rxjava3:2.3.0-alpha03"
+    implementation "androidx.room:room-rxjava3:2.3.0-rc01"
 
     //lifecycle
     def lifecycle_ver = '2.2.0'
@@ -89,12 +88,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ver"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //navigation
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
@@ -103,19 +102,17 @@ dependencies {
     implementation 'org.mongodb:bson:4.0.3'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
     implementation files('libs/commons-io-2.6.jar')
-    implementation 'com.facebook.android:facebook-login:[5,6)'
-    implementation "androidx.preference:preference-ktx:1.1.0"
-    implementation 'androidx.activity:activity-ktx:1.2.0-alpha07'
+    implementation "androidx.preference:preference-ktx:1.1.1"
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha06'
 
     implementation "androidx.cardview:cardview:1.0.0"
 
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
-    implementation "com.google.android.material:material:1.2.1"
+    implementation "com.google.android.material:material:1.3.0"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
