--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ ext {
 
 buildscript {
     ext.kotlinVersion = '1.4.32'
+    ext.nav_version = "2.3.5"
 
     repositories {
         google()
@@ -13,7 +14,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0-rc01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        def nav_version = "2.3.5"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.33-beta"
         // NOTE: Do not place your application dependencies here; they belong
